5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1646_2449.log
== TEST (2019-04-05 19:43:10) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f != 0):
	print(x)
	print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:43:36) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f != 0):
	print(x)
	print(y)
-- EXECUTION TIME:
0.242182
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:45:39) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:47:19) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f != 0):
	print(x)
	print(y)
else: 
	print("Nao tem solucao")
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:47:41) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f != 0):
	print(x)
	print(y)
else: 
	print("Nao tem solucao")
	
	
-- EXECUTION TIME:
0.159211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:49:08) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:49:45) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (x,y == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:50:30) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a,b,c,d,e,f == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:53:09) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (c*e,b*f,a*f,c*d,a*e,b*d == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 19:53:22) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (c*e,b*f,a*f,c*d,a*e,b*d == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:53:26) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (c*e,b*f,a*f,c*d,a*e,b*d == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- EXECUTION TIME:
0.211934
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 19:53:39) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (x,y == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- EXECUTION TIME:
0.159584
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:31:07) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))
x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a*e-b*d == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:31:20) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))
x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a*e-b*d == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- EXECUTION TIME:
0.131813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:33:09) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))
x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a*e == b*d):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:33:18) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))
x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a*e == b*d):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- EXECUTION TIME:
0.223955
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:33:39) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))
x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)

if (a*e,b*d == 0):
	print("Nao tem solucao")
else: 
	print(x)
	print(y)
	
	
-- EXECUTION TIME:
0.135416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 7, in <module>
    x = (c*e - b*f)/(a*e - b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:38:44) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if (a*e - b*d == 0):
	print("Nao tem solucao")
else: 
x = (c*e - b*f)/(a*e - b*d)
y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)
	
	
-- ERROR:
File "XXXX", line 11
    x = (c*e - b*f)/(a*e - b*d)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 21:39:16) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if (a*e - b*d == 0):
	print("Nao tem solucao")
else: 
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)
	
	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 21:39:19) 
-- CODE:
a = float(input("Valor de a: "))
b = float(input("Valor de b: "))
c = float(input("Valor de c: "))
d = float(input("Valor de d: "))
e = float(input("Valor de e: "))
f = float(input("Valor de f: "))

if (a*e - b*d == 0):
	print("Nao tem solucao")
else: 
	x = (c*e - b*f)/(a*e - b*d)
	y = (a*f - c*d)/(a*e - b*d)
	print(x)
	print(y)
	
	
-- EXECUTION TIME:
0.146272
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
